--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,9 +1,6 @@
 name: Docker Image CI
 
-on:
-  pull_request:
-    branches: [ "dev-auto-annotate" ]
-  workflow_workflow_dispatch:
+on: workflow_dispatch
     
 
 jobs:
